updated populateDatabase